--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background-color: aliceblue;
+  background-color: #fff;
 }
 
 .container {
@@ -19,4 +19,7 @@ body {
 nunito ou monteserra et ?
  Couleur vert et beige
  8db53e
+vert #91A644
+beige EEDDAC
+brun 6A5243
 */
