--- a/style/css/style.css
+++ b/style/css/style.css
@@ -229,6 +229,52 @@ main section {
   cursor: pointer;
 }
 
+/*******  gallery  *******/
+.gallery__container {
+  display: grid;
+  grid-template-columns: 1.5fr repeat(5, 1fr);
+  grid-gap: 15px;
+  margin: 25px auto;
+}
+.gallery__container .gallery__shrek-ane {
+  grid-column: 1/2;
+  grid-row: 1/3;
+  display: flex;
+  align-items: center;
+}
+.gallery__container .gallery__shrek-calin {
+  grid-column: 2/span 3;
+  grid-row: 1/2;
+}
+.gallery__container .gallery__fiona {
+  grid-column: 5/6;
+  grid-row: 1/2;
+  display: flex;
+  align-items: end;
+}
+.gallery__container .gallery__ane {
+  grid-column: 6/7;
+  grid-row: 1/3;
+  display: flex;
+  align-items: center;
+}
+.gallery__container .gallery__chat {
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+.gallery__container .gallery__shrek-face {
+  grid-column: 3/span 3;
+  grid-row: 2/3;
+}
+.gallery__container img {
+  width: 100%;
+}
+
+/*******  Statistiques  *******/
+#stats {
+  background-color: pink;
+}
+
 /*******  footer  *******/
 footer {
   margin-top: 25px;
@@ -293,6 +339,45 @@ footer .last-line__contact img {
     margin-right: 0 !important;
   }
 }
+@media screen and (max-width: 1024px) {
+  .gallery__container {
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 10px;
+  }
+  .gallery__container .gallery__shrek-ane {
+    grid-column: 2/span 3;
+    grid-row: 4/5;
+    display: flex;
+    justify-content: center;
+  }
+  .gallery__container .gallery__shrek-ane img {
+    max-width: 60%;
+  }
+  .gallery__container .gallery__shrek-calin {
+    grid-column: 1/span 3;
+    grid-row: 1/2;
+  }
+  .gallery__container .gallery__fiona {
+    grid-column: 4/5;
+    grid-row: 1/2;
+    display: flex;
+    align-items: end;
+  }
+  .gallery__container .gallery__ane {
+    grid-column: 1/2;
+    grid-row: 3/span 2;
+    display: flex;
+    align-items: start;
+  }
+  .gallery__container .gallery__chat {
+    grid-column: 1/2;
+    grid-row: 2/3;
+  }
+  .gallery__container .gallery__shrek-face {
+    grid-column: 2/span 3;
+    grid-row: 2/span 2;
+  }
+}
 @media screen and (max-width: 950px) {
   header .menu {
     display: none;
@@ -329,6 +414,20 @@ footer .last-line__contact img {
   footer .last-line__contact {
     grid-column: 1/2;
     grid-row: 2/3;
+  }
+}
+@media screen and (max-width: 720px) {
+  .gallery__container {
+    display: flex;
+    flex-direction: column;
+  }
+  .gallery__container .gallery__ane {
+    display: flex;
+    align-items: start;
+  }
+  .gallery__container .gallery__ane img {
+    max-width: 50%;
+    padding-left: 10%;
   }
 }
 @media screen and (max-width: 550px) {
