--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -15,6 +15,8 @@ $border-primary: 3px solid $color-primary;
 $border-secondary: 3px solid $color-secondary;
 $border-white: 3px solid $color-white;
 
+//$grid-unit: (1200 /36) px;
+
 *,
 ::before,
 ::after {
@@ -290,6 +292,58 @@ main {
   }
 }
 
+/*******  gallery  *******/
+
+.gallery__container {
+  display: grid;
+  grid-template-columns: 1.5fr repeat(5, 1fr);
+  grid-gap: 15px;
+  margin: 25px auto;
+
+  .gallery {
+    &__shrek-ane {
+      grid-column: 1 / 2;
+      grid-row: 1 / 3;
+      display: flex;
+      align-items: center;
+    }
+    &__shrek-calin {
+      grid-column: 2 / span 3;
+      grid-row: 1 / 2;
+    }
+    &__fiona {
+      grid-column: 5 / 6;
+      grid-row: 1 / 2;
+      display: flex;
+      align-items: end;
+    }
+    &__ane {
+      grid-column: 6 / 7;
+      grid-row: 1 / 3;
+      display: flex;
+      align-items: center;
+    }
+    &__chat {
+      grid-column: 2 / 3;
+      grid-row: 2 / 3;
+    }
+    &__shrek-face {
+      grid-column: 3 / span 3;
+      grid-row: 2 / 3;
+    }
+  }
+
+  img {
+    width: 100%;
+  }
+}
+
+/*******  Statistiques  *******/
+
+#stats {
+  background-color: pink;
+}
+
 /*******  footer  *******/
 
 footer {
@@ -373,6 +427,50 @@ footer {
   }
 }
 
+@media screen and (max-width: 1024px) {
+  .gallery__container {
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 10px;
+
+    .gallery {
+      &__shrek-ane {
+        grid-column: 2 / span 3;
+        grid-row: 4 / 5;
+        display: flex;
+        justify-content: center;
+
+        img {
+          max-width: 60%;
+        }
+      }
+      &__shrek-calin {
+        grid-column: 1 / span 3;
+        grid-row: 1 / 2;
+      }
+      &__fiona {
+        grid-column: 4 / 5;
+        grid-row: 1 / 2;
+        display: flex;
+        align-items: end;
+      }
+      &__ane {
+        grid-column: 1 / 2;
+        grid-row: 3 / span 2;
+        display: flex;
+        align-items: start;
+      }
+      &__chat {
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+      }
+      &__shrek-face {
+        grid-column: 2 / span 3;
+        grid-row: 2 / span 2;
+      }
+    }
+  }
+}
+
 @media screen and (max-width: 950px) {
   header {
     .menu {
@@ -415,6 +513,25 @@ footer {
       &__contact {
         grid-column: 1/2;
         grid-row: 2/3;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 720px) {
+  .gallery__container {
+    display: flex;
+    flex-direction: column;
+
+    .gallery {
+      &__ane {
+        display: flex;
+        align-items: start;
+
+        img {
+          max-width: 50%;
+          padding-left: 10%;
+        }
       }
     }
   }
