--- a/style/css/style.css
+++ b/style/css/style.css
@@ -54,11 +54,14 @@ header .menu__alt {
   display: none;
 }
 
-main section {
+section {
   margin: 25px 0;
 }
 
 /*******  Section carousel  *******/
+.carousel {
+  padding: 0 10px;
+}
 .carousel ::-webkit-scrollbar {
   display: none;
 }
@@ -179,6 +182,50 @@ main section {
 }
 .slogan .slogan__container .slogan__btn--red {
   color: red;
+}
+
+/*******  Section blog  *******/
+.blogs {
+  padding: 25px 0;
+}
+.blogs__title {
+  text-align: center;
+  font-size: 32px;
+  padding: 25px 0;
+}
+.blogs__description {
+  width: 60%;
+  font-size: 16px;
+  text-align: center;
+  margin: 0 auto;
+  padding-bottom: 25px;
+}
+.blogs__container {
+  display: flex;
+  justify-content: space-between;
+}
+.blogs__container .blog {
+  flex-basis: 30%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  row-gap: 20px;
+}
+.blogs__container .blog__avatar {
+  width: 70px;
+  height: 70px;
+}
+.blogs__container .blog__avatar img {
+  width: 100%;
+  border-radius: 50%;
+  box-shadow: 0 1rem 1rem -0.75rem #6a5243;
+}
+.blogs__container .blog__text {
+  text-align: center;
+}
+.blogs__container .blog__author {
+  align-self: flex-end;
 }
 
 /*******  Section contact  *******/
