--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -80,18 +80,19 @@ header {
   }
 }
 
-main {
-  section {
-    margin: 25px 0;
-    // TODO ?? les margins ne s'additionnent pas mais se combinent?
-  }
+section {
+  margin: 25px 0;
+  // TODO ?? les margins ne s'additionnent pas mais se combinent?
 }
+
 /*******  Section carousel  *******/
 
 .carousel {
   ::-webkit-scrollbar {
     display: none;
   }
+  padding: 0 10px;
+
   .carousel__container {
     position: relative;
     max-width: 1200px;
@@ -228,6 +229,57 @@ main {
         color: red;
       }
       // TODO faire hover sur les bouttons
+    }
+  }
+}
+
+/*******  Section blog  *******/
+
+.blogs {
+  padding: 25px 0;
+  &__title {
+    text-align: center;
+    font-size: $font-size * 2;
+    padding: 25px 0;
+  }
+
+  &__description {
+    width: 60%;
+    font-size: $font-size;
+    text-align: center;
+    margin: 0 auto;
+    padding-bottom: 25px;
+  }
+
+  &__container {
+    display: flex;
+    justify-content: space-between;
+
+    .blog {
+      flex-basis: 30%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 10px;
+      row-gap: 20px;
+
+      &__avatar {
+        width: 70px;
+        height: 70px;
+
+        img {
+          width: 100%;
+          border-radius: 50%;
+          box-shadow: 0 1rem 1rem -0.75rem $color-accent;
+        }
+      }
+
+      &__text {
+        text-align: center;
+      }
+      &__author {
+        align-self: flex-end;
+      }
     }
   }
 }
