--- a/style/css/style.css
+++ b/style/css/style.css
@@ -228,7 +228,93 @@ section {
   align-self: flex-end;
 }
 
-/*******  Section contact  *******/
+/*******  section gallery  *******/
+.gallery__container {
+  display: grid;
+  grid-template-columns: 1.5fr repeat(5, 1fr);
+  grid-gap: 15px;
+  margin: 25px auto;
+}
+.gallery__container .gallery__shrek-ane {
+  grid-column: 1/2;
+  grid-row: 1/3;
+  display: flex;
+  align-items: center;
+}
+.gallery__container .gallery__shrek-calin {
+  grid-column: 2/span 3;
+  grid-row: 1/2;
+}
+.gallery__container .gallery__fiona {
+  grid-column: 5/6;
+  grid-row: 1/2;
+  display: flex;
+  align-items: end;
+}
+.gallery__container .gallery__ane {
+  grid-column: 6/7;
+  grid-row: 1/3;
+  display: flex;
+  align-items: center;
+}
+.gallery__container .gallery__chat {
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+.gallery__container .gallery__shrek-face {
+  grid-column: 3/span 3;
+  grid-row: 2/3;
+}
+.gallery__container img {
+  width: 100%;
+}
+
+/*******  section statistiques  *******/
+#stats {
+  background-color: pink;
+}
+
+/*******  section movies  *******/
+.movies {
+  padding: 40px 0;
+}
+.movies__title {
+  text-align: center;
+  font-size: 32px;
+  padding: 25px 0;
+}
+.movies__description {
+  width: 60%;
+  font-size: 16px;
+  text-align: center;
+  margin: 0 auto;
+  padding-bottom: 25px;
+}
+.movies__container {
+  display: flex;
+  justify-content: space-between;
+}
+.movies__container .movie {
+  flex-basis: 20%;
+  display: flex;
+  box-shadow: 0 1.5rem 3rem -0.75rem #6a5243;
+  border-radius: 0.5rem;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px 10px 10px 10px;
+  row-gap: 20px;
+}
+.movies__container .movie__title {
+  text-align: center;
+}
+.movies__container .movie__title--caption {
+  font-size: 12.8px;
+}
+.movies__container .movie .movies__container .movie__text {
+  text-align: justify;
+}
+
+/*******  section contact  *******/
 .contact__form {
   background-color: #eeddac;
   padding: 10px;
@@ -274,52 +360,6 @@ section {
   color: #fff;
   font-size: 19.2px;
   cursor: pointer;
-}
-
-/*******  gallery  *******/
-.gallery__container {
-  display: grid;
-  grid-template-columns: 1.5fr repeat(5, 1fr);
-  grid-gap: 15px;
-  margin: 25px auto;
-}
-.gallery__container .gallery__shrek-ane {
-  grid-column: 1/2;
-  grid-row: 1/3;
-  display: flex;
-  align-items: center;
-}
-.gallery__container .gallery__shrek-calin {
-  grid-column: 2/span 3;
-  grid-row: 1/2;
-}
-.gallery__container .gallery__fiona {
-  grid-column: 5/6;
-  grid-row: 1/2;
-  display: flex;
-  align-items: end;
-}
-.gallery__container .gallery__ane {
-  grid-column: 6/7;
-  grid-row: 1/3;
-  display: flex;
-  align-items: center;
-}
-.gallery__container .gallery__chat {
-  grid-column: 2/3;
-  grid-row: 2/3;
-}
-.gallery__container .gallery__shrek-face {
-  grid-column: 3/span 3;
-  grid-row: 2/3;
-}
-.gallery__container img {
-  width: 100%;
-}
-
-/*******  Statistiques  *******/
-#stats {
-  background-color: pink;
 }
 
 /*******  footer  *******/
