--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -284,7 +284,107 @@ section {
   }
 }
 
-/*******  Section contact  *******/
+/*******  section gallery  *******/
+
+.gallery__container {
+  display: grid;
+  grid-template-columns: 1.5fr repeat(5, 1fr);
+  grid-gap: 15px;
+  margin: 25px auto;
+
+  .gallery {
+    &__shrek-ane {
+      grid-column: 1 / 2;
+      grid-row: 1 / 3;
+      display: flex;
+      align-items: center;
+    }
+    &__shrek-calin {
+      grid-column: 2 / span 3;
+      grid-row: 1 / 2;
+    }
+    &__fiona {
+      grid-column: 5 / 6;
+      grid-row: 1 / 2;
+      display: flex;
+      align-items: end;
+    }
+    &__ane {
+      grid-column: 6 / 7;
+      grid-row: 1 / 3;
+      display: flex;
+      align-items: center;
+    }
+    &__chat {
+      grid-column: 2 / 3;
+      grid-row: 2 / 3;
+    }
+    &__shrek-face {
+      grid-column: 3 / span 3;
+      grid-row: 2 / 3;
+    }
+  }
+
+  img {
+    width: 100%;
+  }
+}
+
+/*******  section statistiques  *******/
+
+#stats {
+  background-color: pink;
+}
+
+/*******  section movies  *******/
+
+.movies {
+  padding: 40px 0;
+
+  &__title {
+    text-align: center;
+    font-size: $font-size * 2;
+    padding: 25px 0;
+  }
+
+  &__description {
+    width: 60%;
+    font-size: $font-size;
+    text-align: center;
+    margin: 0 auto;
+    padding-bottom: 25px;
+  }
+
+  &__container {
+    display: flex;
+    justify-content: space-between;
+
+    .movie {
+      flex-basis: 20%;
+      display: flex;
+      box-shadow: 0 1.5rem 3rem -0.75rem $color-accent;
+      border-radius: 0.5rem;
+      flex-direction: column;
+      align-items: center;
+      padding: 20px 10px 10px 10px;
+      row-gap: 20px;
+
+      &__title {
+        text-align: center;
+
+        &--caption {
+          font-size: $font-size * 0.8;
+        }
+      }
+
+      & &__text {
+        text-align: justify;
+      }
+    }
+  }
+}
+
+/*******  section contact  *******/
 .contact {
   &__form {
     background-color: $color-secondary;
@@ -342,58 +442,6 @@ section {
       }
     }
   }
-}
-
-/*******  gallery  *******/
-
-.gallery__container {
-  display: grid;
-  grid-template-columns: 1.5fr repeat(5, 1fr);
-  grid-gap: 15px;
-  margin: 25px auto;
-
-  .gallery {
-    &__shrek-ane {
-      grid-column: 1 / 2;
-      grid-row: 1 / 3;
-      display: flex;
-      align-items: center;
-    }
-    &__shrek-calin {
-      grid-column: 2 / span 3;
-      grid-row: 1 / 2;
-    }
-    &__fiona {
-      grid-column: 5 / 6;
-      grid-row: 1 / 2;
-      display: flex;
-      align-items: end;
-    }
-    &__ane {
-      grid-column: 6 / 7;
-      grid-row: 1 / 3;
-      display: flex;
-      align-items: center;
-    }
-    &__chat {
-      grid-column: 2 / 3;
-      grid-row: 2 / 3;
-    }
-    &__shrek-face {
-      grid-column: 3 / span 3;
-      grid-row: 2 / 3;
-    }
-  }
-
-  img {
-    width: 100%;
-  }
-}
-
-/*******  Statistiques  *******/
-
-#stats {
-  background-color: pink;
 }
 
 /*******  footer  *******/
