--- a/style/css/style.css
+++ b/style/css/style.css
@@ -267,6 +267,7 @@ section {
 }
 .gallery__container img {
   width: 100%;
+  border-radius: 2px;
 }
 
 /*******  section statistiques  *******/
@@ -315,21 +316,30 @@ section {
 }
 
 /*******  section contact  *******/
+.contact {
+  position: relative;
+  margin: 40px auto;
+}
+.contact iframe {
+  width: 100%;
+  height: 500px;
+  border: 0;
+}
 .contact__form {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 20px;
   background-color: #eeddac;
   padding: 10px;
   border-radius: 10px;
   max-width: 30%;
 }
+.contact__form h3 {
+  margin: 10px 0;
+}
 .contact__form .form__group {
   margin: 20px 0;
-  display: flex;
-}
-.contact__form .form__group--width {
-  flex-grow: 1;
-}
-.contact__form .form__group--width:nth-child(1) {
-  margin-right: 10px;
 }
 .contact__form .form__group .form__label--hidden {
   display: none;
@@ -347,6 +357,12 @@ section {
 .contact__form .form__group textarea:hover {
   outline: none;
   border-bottom: 3px solid #91a644;
+}
+.contact__form .form__group--row {
+  display: flex;
+}
+.contact__form .form__group--row .form__group--margin-right {
+  margin-right: 10px;
 }
 .contact__form .form__submit {
   display: flex;
@@ -418,12 +434,16 @@ footer .last-line__contact img {
 }
 
 /*******  Media Query  *******/
-@media screen and (max-width: 1200px) {
-  .form__group {
+@media screen and (max-width: 1300px) {
+  .contact__form .form__group--row {
+    display: flex;
     flex-direction: column;
   }
-  .form__group--width {
-    margin-right: 0 !important;
+  .contact__form .form__group--row .form__group--margin-right {
+    margin-right: 0;
+  }
+  .contact__form .form__group--row .form__group--margin-top {
+    margin-top: 20px;
   }
 }
 @media screen and (max-width: 1024px) {
@@ -463,6 +483,24 @@ footer .last-line__contact img {
   .gallery__container .gallery__shrek-face {
     grid-column: 2/span 3;
     grid-row: 2/span 2;
+  }
+  .contact__form {
+    position: static;
+    transform: none;
+    max-width: 80%;
+    margin: 20px auto;
+  }
+  .contact__form .form__group--row {
+    flex-direction: row;
+  }
+  .contact__form .form__group--row .form__group--margin-right {
+    margin-right: 10px;
+  }
+  .contact__form .form__group--row .form__group--margin-top {
+    margin-top: 0;
+  }
+  .contact__form .form__group--row .form__group--width {
+    flex-grow: 1;
   }
 }
 @media screen and (max-width: 950px) {
@@ -515,6 +553,11 @@ footer .last-line__contact img {
   .gallery__container .gallery__ane img {
     max-width: 50%;
     padding-left: 10%;
+  }
+}
+@media screen and (max-width: 650px) {
+  .contact__form {
+    max-width: 100%;
   }
 }
 @media screen and (max-width: 550px) {
