--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -327,6 +327,7 @@ section {
 
   img {
     width: 100%;
+    border-radius: 2px;
   }
 }
 
@@ -386,23 +387,32 @@ section {
 
 /*******  section contact  *******/
 .contact {
+  position: relative;
+  margin: 40px auto;
+
+  iframe {
+    width: 100%;
+    height: 500px;
+    border: 0;
+  }
+
   &__form {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 20px;
     background-color: $color-secondary;
     padding: 10px;
     border-radius: 10px;
     max-width: 30%;
 
+    h3 {
+      margin: 10px 0;
+      //font-size: 40px;
+    }
+
     .form__group {
       margin: 20px 0;
-      display: flex;
-
-      &--width {
-        flex-grow: 1;
-
-        &:nth-child(1) {
-          margin-right: 10px;
-        }
-      }
 
       .form__label {
         &--hidden {
@@ -426,6 +436,14 @@ section {
       }
     }
 
+    .form__group--row {
+      display: flex;
+
+      .form__group--margin-right {
+        margin-right: 10px;
+      }
+    }
+
     .form__submit {
       display: flex;
       justify-content: end;
@@ -443,7 +461,6 @@ section {
     }
   }
 }
-
 /*******  footer  *******/
 
 footer {
@@ -516,13 +533,18 @@ footer {
 /*******  Media Query  *******/
 
 // TODO ?? vérifier comment placer media query
+@media screen and (max-width: 1300px) {
+  .contact__form {
+    .form__group--row {
+      display: flex;
+      flex-direction: column;
 
-@media screen and (max-width: 1200px) {
-  .form__group {
-    flex-direction: column;
-
-    &--width {
-      margin-right: 0 !important; // TODO ??
+      .form__group--margin-right {
+        margin-right: 0;
+      }
+      .form__group--margin-top {
+        margin-top: 20px;
+      }
     }
   }
 }
@@ -569,6 +591,27 @@ footer {
       }
     }
   }
+
+  .contact__form {
+    position: static;
+    transform: none;
+    max-width: 80%;
+    margin: 20px auto;
+
+    .form__group--row {
+      flex-direction: row;
+
+      .form__group--margin-right {
+        margin-right: 10px;
+      }
+      .form__group--margin-top {
+        margin-top: 0;
+      }
+      .form__group--width {
+        flex-grow: 1;
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 950px) {
@@ -580,6 +623,7 @@ footer {
       display: block;
     }
   }
+
   .slogan__container {
     flex-direction: column;
 
@@ -634,6 +678,12 @@ footer {
         }
       }
     }
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .contact__form {
+    max-width: 100%;
   }
 }
 
