--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -41,6 +41,13 @@ body {
   width: 200px;
 }
 
+// Voir si conserve
+section {
+  margin: 25px 0;
+  // TODO ?? les margins ne s'additionnent pas mais se combinent?
+}
+
+/*******  header  *******/
 header {
   display: flex;
   justify-content: space-between;
@@ -80,13 +87,7 @@ header {
   }
 }
 
-section {
-  margin: 25px 0;
-  // TODO ?? les margins ne s'additionnent pas mais se combinent?
-}
-
 /*******  Section carousel  *******/
-
 .carousel {
   ::-webkit-scrollbar {
     display: none;
@@ -141,7 +142,6 @@ section {
 }
 
 /*******  Section character  *******/
-
 .character {
   padding: 40px 0;
   &__text {
@@ -234,7 +234,6 @@ section {
 }
 
 /*******  Section blog  *******/
-
 .blogs {
   padding: 25px 0;
   &__title {
@@ -285,7 +284,6 @@ section {
 }
 
 /*******  section gallery  *******/
-
 .gallery__container {
   display: grid;
   grid-template-columns: 1.5fr repeat(5, 1fr);
@@ -332,13 +330,73 @@ section {
 }
 
 /*******  section statistiques  *******/
+.stats {
+  background-color: $color-secondary;
+  margin-top: 40px;
 
-#stats {
-  background-color: pink;
+  .container {
+    display: flex;
+    .left {
+      width: 40%;
+      margin: 40px auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      &__slice-pie {
+        width: 400px;
+        height: 400px;
+        border-radius: 50%;
+        border-right: 200px solid $color-primary;
+        border-top: 200px solid $color-accent;
+        border-bottom: 200px solid $color-accent;
+        border-left: 200px solid $color-accent;
+        transform: rotate(-35deg);
+      }
+    }
+
+    .right {
+      width: 60%;
+      padding: 10px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+
+      &__title {
+        margin-bottom: 25px;
+        font-size: $font-size * 2;
+      }
+
+      &__stats {
+        display: flex;
+        gap: 25%;
+        margin: 25px 0;
+
+        &--big {
+          font-size: $font-size * 2;
+          font-weight: bold;
+        }
+      }
+
+      &__btn {
+        padding: 10px 20px;
+        background-color: $color-primary;
+        font-size: $font-size * 1.2;
+        border-radius: 5px;
+        cursor: pointer;
+        align-self: flex-end;
+        margin-top: 25px;
+
+        a {
+          color: $color-white;
+          text-decoration: none;
+        }
+      }
+    }
+  }
 }
 
 /*******  section movies  *******/
-
 .movies {
   padding: 40px 0;
 
@@ -461,8 +519,8 @@ section {
     }
   }
 }
-/*******  footer  *******/
 
+/*******  footer  *******/
 footer {
   margin-top: 25px;
 
@@ -547,6 +605,22 @@ footer {
       }
     }
   }
+  #slice-pie {
+    transform: scale(0.9) rotate(-45deg);
+  }
+  .movies {
+    &__container {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 40px;
+    }
+  }
+}
+
+@media screen and (max-width: 1150px) {
+  #slice-pie {
+    transform: scale(0.8) rotate(-55deg);
+  }
 }
 
 @media screen and (max-width: 1024px) {
@@ -612,6 +686,9 @@ footer {
       }
     }
   }
+  #slice-pie {
+    transform: scale(0.7) rotate(-65deg);
+  }
 }
 
 @media screen and (max-width: 950px) {
@@ -660,6 +737,20 @@ footer {
       }
     }
   }
+  #slice-pie {
+    transform: scale(0.6) rotate(-75deg);
+  }
+  .blogs {
+    &__container {
+      flex-direction: column;
+    }
+  }
+  .movies {
+    &__container {
+      grid-template-columns: 1fr;
+      gap: 40px;
+    }
+  }
 }
 
 @media screen and (max-width: 720px) {
@@ -679,6 +770,19 @@ footer {
       }
     }
   }
+  #slice-pie {
+    display: none;
+  }
+  .stats {
+    .container {
+      .left {
+        width: 0%;
+      }
+      .right {
+        width: 100%;
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 650px) {
@@ -695,4 +799,10 @@ footer {
       margin: 20px;
     }
   }
+  //footer {
+  //.last-line {
+  //&__contact {
+  //}
+  //}
+  //}
 }
