--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -57,21 +57,19 @@ header {
     display: none;
   }
 
-  // TODO changer menu < 950px
-
   .menu {
     display: flex;
     justify-content: center;
     margin: 25px 0;
 
-    &__links {
+    &__link {
       display: inline-block;
       padding: 10px 10px;
 
       a {
-        display: flex;
+        //display: flex;
+        //align-items: flex-end;
         text-decoration-line: none;
-        align-items: flex-end;
         color: rgb(41, 39, 39);
         font-size: $font-size * 1.3;
         // scroll-behavior: smooth; TODO faire transition lente
@@ -79,11 +77,11 @@ header {
         &:hover {
           border-bottom: $border-primary;
         }
+        img {
+          display: none;
+        }
       }
     }
-  }
-  .menu__alt {
-    display: none;
   }
 }
 
@@ -544,10 +542,10 @@ footer {
         align-items: flex-end;
         padding: 10px 10px;
         color: rgb(41, 39, 39);
+      }
 
-        span {
-          font-size: 20px;
-        }
+      span {
+        font-size: 20px;
       }
 
       &--span:hover {
@@ -555,6 +553,8 @@ footer {
       }
     }
   }
+
+  // TODO réparer menu footer
 
   .separator {
     border-top: $separator;
@@ -693,11 +693,46 @@ footer {
 
 @media screen and (max-width: 950px) {
   header {
-    .menu {
-      display: none;
+    flex-direction: column;
+
+    .container__logo {
+      text-align: center;
+      margin-top: 20px;
     }
-    .menu__alt {
-      display: block;
+
+    .menu {
+      margin: 40px 0;
+
+      ul {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+      }
+
+      &__link {
+        //display: inline-block;
+        //padding: 10px 10px;
+        background-color: $color-secondary;
+        flex-grow: 1;
+        margin: 0 10px;
+        border-radius: 10px;
+      }
+
+      &__link:hover {
+        flex-grow: 2;
+        background-color: $color-primary;
+      }
+
+      .link__text {
+        display: none;
+      }
+
+      .link__img {
+        display: block;
+        width: 30px;
+        margin: 0 auto;
+      }
     }
   }
 
