--- a/style/scss/utilities/_general.scss
+++ b/style/scss/utilities/_general.scss
@@ -7,6 +7,9 @@
   margin: 0px;
   padding: 0px;
 }
+//html {
+//scroll-behavior: smooth;
+//}
 
 body {
   background-color: variables.$color-white;
@@ -22,9 +25,4 @@ body {
 
 .logo {
   width: 200px;
-}
-
-//TODO Voir si conserve
-section {
-  margin: 25px 0;
 }
